fix(articles-usecase): GetMany according repo
