# internal/controller/http/v1/articles.go
@@ -19,9 +19,14 @@ func newArticlesRoutes(handler *gin.RouterGroup, a usecase.Article, l logger.Int
 
 	h := handler.Group("/articles")
 	{
-		h.GET("/getAll", r.getAll)
+		h.GET("/getMany", r.getMany)
 		h.POST("/create", r.create)
 	}
+}
+
+type getManyRequest struct {
+	Offset int `form:"offset" binding:"min=0,required" example:"42"`
+	Count  int `form:"count" binding:"min=1,required" example:"10"`
 }
 
 type articlesResponse struct {
@@ -31,11 +36,20 @@ type articlesResponse struct {
 // @Summary Gets all articles
 // @Description Gets all articles
 // @Produce json
-// @Success 200 {object} articlesResponse
-// @Failure 500 {object} response
-// @Router /articles/getAll [get]
-func (r *articlesRoutes) getAll(c *gin.Context) {
-	articles, err := r.a.GetMany(c.Request.Context())
+// @Param   offset query    int true "offset to get"
+// @Param   count  query    int true "count to get"
+// @Success 200    {object} articlesResponse
+// @Failure 500    {object} response
+// @Router  /articles/getMany [get]
+func (r *articlesRoutes) getMany(c *gin.Context) {
+	var request getManyRequest
+	if err := c.ShouldBindQuery(&request); err != nil {
+		r.l.Error(err, "http - v1 - create")
+		validationErrorResponse(c, http.StatusBadRequest, err) // TODO: make good error structs
+		return
+	}
+
+	articles, err := r.a.GetMany(c.Request.Context(), uint(request.Offset), uint(request.Count))
 	if err != nil {
 		r.l.Error(err, "http - v1 - getAll")
 		errorResponse(c, http.StatusInternalServerError, "database problems")
@@ -61,31 +75,31 @@ func (r *articlesRoutes) getAll(c *gin.Context) {
 
 type createArticleRequest struct {
 	CustomId  string                 `json:"custom_id" binding:"min=3,max=20,required" example:"article-url"`
-	AuthorId  int                    `json:"author_id" binding:"required" example:"42"`
+	AuthorId  uint                   `json:"author_id" binding:"required" example:"42"`
 	Title     string                 `json:"title" binding:"min=5,max=150,required" example:"How to ..."`
 	Thumbnail string                 `json:"thumbnail" binding:"url,required" example:"https://smth.com/thumbnail.png"`
 	Content   map[string]interface{} `json:"content" binding:"required"`
 }
 
 type articleResponse struct {
-	Id        int                    `json:"id" example:"1000"`
+	Id        uint                   `json:"id" example:"1000"`
 	CustomId  string                 `json:"custom_id" example:"article-url"`
-	AuthorId  int                    `json:"author_id" example:"42"`
+	AuthorId  uint                   `json:"author_id" example:"42"`
 	Title     string                 `json:"title" example:"How to ..."`
 	Thumbnail string                 `json:"thumbnail" example:"https://smth.com/thumbnail.png"`
 	Content   map[string]interface{} `json:"content"`
 	CreatedAt time.Time              `json:"created_at" example:"2022-10-07T14:26:06.510465Z"`
 }
 
-// @Summary Creates an article
+// @Summary     Creates an article
 // @Description Creates an article
-// @Accept json
-// @Produce json
-// @Param request body createArticleRequest true "article to create"
-// @Success 200 {object} articlesResponse
-// @Failure 400 {object} response
-// @Failure 500 {object} response
-// @Router /articles/create [post]
+// @Accept      json
+// @Produce     json
+// @Param       request body     createArticleRequest true "article to create"
+// @Success     200     {object} articlesResponse
+// @Failure     400     {object} response
+// @Failure     500     {object} response
+// @Router      /articles/create [post]
 func (r *articlesRoutes) create(c *gin.Context) {
 	var request createArticleRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
